@@ -11,60 +11,64 @@ import com.udacity.webcrawler.profiler.Profiler;
 import com.udacity.webcrawler.profiler.ProfilerModule;
 
 import javax.inject.Inject;
-
 import java.io.BufferedWriter;
 import java.io.OutputStreamWriter;
 import java.io.Writer;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Objects;
 
 public final class WebCrawlerMain {
 
-  private final CrawlerConfiguration config;
+    private final CrawlerConfiguration config;
 
-  private WebCrawlerMain(CrawlerConfiguration config) {
-    this.config = Objects.requireNonNull(config);
-  }
+    @Inject
+    private WebCrawler crawler;
 
-  @Inject
-  private WebCrawler crawler;
+    @Inject
+    private Profiler profiler;
 
-  @Inject
-  private Profiler profiler;
-
-  private void run() throws Exception {
-    Guice.createInjector(new WebCrawlerModule(config), new ProfilerModule()).injectMembers(this);
-
-    CrawlResult result = crawler.crawl(config.getStartPages());
-    CrawlResultWriter resultWriter = new CrawlResultWriter(result);
-    // Write the crawl results to a JSON file (or System.out if the file name is empty)
-    String resultPath = config.getResultPath();
-    if (!resultPath.isEmpty()) {
-      Path path = Paths.get(resultPath);
-      resultWriter.write(path);
-    } else {
-      Writer out = new BufferedWriter(new OutputStreamWriter(System.out));
-      resultWriter.write(out);
-    }
-    // Write the profile data to a text file (or System.out if the file name is empty)
-    String profilePath = config.getProfileOutputPath();
-    if(!profilePath.isEmpty()) {
-      Path path = Paths.get(profilePath);
-      resultWriter.write(path);
-    } else {
-      Writer out = new BufferedWriter(new OutputStreamWriter(System.out));
-      resultWriter.write(out);
-    }
-  }
-
-  public static void main(String[] args) throws Exception {
-    if (args.length != 1) {
-      System.out.println("Usage: WebCrawlerMain [starting-url]");
-      return;
+    private WebCrawlerMain(CrawlerConfiguration config) {
+        this.config = Objects.requireNonNull(config);
     }
 
-    CrawlerConfiguration config = new ConfigurationLoader(Path.of(args[0])).load();
-    new WebCrawlerMain(config).run();
-  }
+    private void run() throws Exception {
+        Guice.createInjector(new WebCrawlerModule(config), new ProfilerModule()).injectMembers(this);
+
+        CrawlResult result = crawler.crawl(config.getStartPages());
+        CrawlResultWriter resultWriter = new CrawlResultWriter(result);
+
+        // Write the crawl results to a JSON file (or System.out if the file name is empty)
+        String resultPath = config.getResultPath();
+        if (!resultPath.isEmpty()) {
+            Path path = Paths.get(resultPath);
+            resultWriter.write(path);
+        } else {
+            try (Writer out = new BufferedWriter(new OutputStreamWriter(System.out))) {
+                resultWriter.write(out);
+            }
+        }
+
+        // Write the profile data to a text file (or System.out if the file name is empty)
+        String profilePath = config.getProfileOutputPath();
+        if (!profilePath.isEmpty()) {
+            Path profileOutputPath = Paths.get(profilePath);
+            profiler.writeData(profileOutputPath);
+        } else {
+            try (Writer out = new BufferedWriter(new OutputStreamWriter(System.out))) {
+                profiler.writeData(out);
+            }
+        }
+    }
+
+    public static void main(String[] args) throws Exception {
+        if (args.length != 1) {
+            System.out.println("Usage: WebCrawlerMain [config-file]");
+            return;
+        }
+
+        CrawlerConfiguration config = new ConfigurationLoader(Path.of(args[0])).load();
+        new WebCrawlerMain(config).run();
+    }
 }
